<resources>

    <string name="app_name">ControlCyber</string>
    <string name="action_settings">Settings</string>
    <string name="lista_vacia">Sin Datos</string>
    <string name="title_activity_control_cyber_formulario">Control Cyber Formulario</string>
    <string name="title_activity_control_cyber">Control Cyber </string>
    <string name="menu_settings">Configuración</string>
    <string name="menu_crear">Nueva Maquina</string>
    <string name="menu_salir">Salir de la Aplicacion</string>
    <string name="menu_editar">Editar</string>
    <string name="menu_guardar">Guardar</string>
    <string name="menu_cancelar">Cancelar</string>
    <string name="menu_eliminar">Eliminar</string>
    <string name="menu_visualizar">Ver</string>
    <string name="label_nombre_hipoteca">Nombre:</string>
    <string name="label_condiciones">Condiciones:</string>
    <string name="label_hora_ent">Hora Entrada:</string>
    <string name="label_hora_sal">Hora Salida:</string>
    <string name="label_acumulado">Minutos acumulados:</string>
    <string name="label_observaciones">Observaciones:</string>
    <string name="boton_guardar">Guardar</string>
    <string name="boton_cancelar">Cancelar</string>
    <string name="control_cyber_crear_titulo">Nueva Maquina</string>
    <string name="control_cyber_crear_confirmacion">Maquina Creada</string>
    <string name="control_cyber_editar_titulo">Editar Maquina</string>
    <string name="control_cyber_editar_confirmacion">Maquina modificada</string>
    <string name="control_cyber_eliminar_titulo">Eliminar Maquina</string>
    <string name="control_cyber_eliminar_mensaje">¿Seguro que desea eliminar la Maquina?</string>
    <string name="control_cyber_eliminar_confirmacion">Maquina eliminada</string>
    <string name="hello_world">Hello world!</string>
    

</resources>